[package]
name = "ruspiro-boot"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.4.2" # remember to update html_root_url
description = """
Bare metal boot strapper code for the Raspberry Pi 3 to conviniently start a custom kernel within the Rust environment
without the need to deal with all the initial setup like stack pointers, switch to the appropriate exeption level and getting all cores kicked off for processing of code compiled from Rust.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-boot/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-boot/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "aarch64", "boot", "baremetal", "multicore"]
categories = ["no-std", "embedded"]
edition = "2018"
links = "ruspiro_boot"
build = "build.rs"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-boot", branch = "release" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-boot" }

[lib]

[build-dependencies]
cc = "1.0.59"

[dependencies]
ruspiro-register = "0.5"
ruspiro-cache = "0.4"

[features]
ruspiro_pi3 = [ ]
multicore = [ ]
test = [ ]

# ensure the required features of the crate are active for the doc.rs build
[package.metadata.docs.rs]
targets = ["aarch64-unknown-none", "aarch64-unknown-linux-gnu"]
features = [
    "ruspiro_pi3",
    "multicore"
]

[patch.crates-io]
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "master" }
ruspiro-cache = { git = "https://github.com/RusPiRo/ruspiro-cache.git", branch = "master" }
