[package]
name = "ruspiro-boot"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.5.0" # remember to update html_root_url
description = """
Bare metal boot strapper code for the Raspberry Pi 3 to conviniently start a custom kernel within the Rust environment
without the need to deal with all the initial setup like stack pointers, switch to the appropriate exeption level and getting all cores kicked off for processing of code compiled from Rust.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-boot/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-boot/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "aarch64", "boot", "baremetal", "multicore"]
categories = ["no-std", "embedded"]
edition = "2018"
# define a linkage name to ensure this crate is ever beeing linked once into a final binary
links = "ruspiro_boot"
# compile the assembler parts before the rust compiler runs on this crate
build = "build.rs"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-boot", branch = "release" }
maintenance = { status = "actively-developed" }
is-it-maintained-open-issues = { repository = "RusPiRo/ruspiro-boot" }

[lib]

[build-dependencies]
cc = "~1.0"

[dependencies]
log = { version = "~0.4", default-features = false }
ruspiro-register = "~0.5"
ruspiro-cache = "~0.4"

[features]
# activate this feature to get multicore support 
multicore = [ ]

# ensure the required features of the crate are active for the doc.rs build
[package.metadata.docs.rs]
targets = ["aarch64-unknown-none", "aarch64-unknown-linux-gnu"]
features = [
    "multicore"
]

[patch.crates-io]
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "master" }
ruspiro-cache = { git = "https://github.com/RusPiRo/ruspiro-cache.git", branch = "master" }
